--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>guava</artifactId>
             <version>13.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>12.0</version>
+        </dependency>
     </dependencies>
 
 
