--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,19 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.17</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.intellij</groupId>
             <artifactId>annotations</artifactId>
             <version>12.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
