--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.intellij</groupId>
+            <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>12.0</version>
+            <version>15.0</version>
             <!-- Only needed for compilation -->
             <scope>provided</scope>
         </dependency>
@@ -86,9 +86,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.torstling.intellij</groupId>
+                <groupId>se.eris</groupId>
                 <artifactId>notnull-instrumenter-maven-plugin</artifactId>
-                <version>0.1.0</version>
+                <version>1.0.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -97,11 +97,18 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains</groupId>
+                        <artifactId>annotations</artifactId>
+                        <version>15.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
